// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationBase should render with all props 1`] = `
<ThemeProvider
  className="application-theme-provider"
  isGlobalTheme={true}
  themeName="test-theme"
>
  <Base
    customMessages={
      Object {
        "custom": "messages",
      }
    }
    locale="en"
    strictMode={false}
    translationsLoadingPlaceholder={
      <div>
        placeholder
      </div>
    }
  >
    <InjectIntl(Component)>
      <ActiveBreakpointProvider>
        <withPromptRegistration(NavigationPromptCheckpoint)
          onPromptChange={[Function]}
        >
          <ApplicationLoadingOverlayProvider>
            <ApplicationErrorBoundary>
              <Suspense
                fallback={
                  <ApplicationLoadingOverlay
                    backgroundStyle="clear"
                    isOpen={true}
                  />
                }
              >
                <div>
                  content
                </div>
              </Suspense>
            </ApplicationErrorBoundary>
          </ApplicationLoadingOverlayProvider>
        </withPromptRegistration(NavigationPromptCheckpoint)>
      </ActiveBreakpointProvider>
    </InjectIntl(Component)>
  </Base>
</ThemeProvider>
`;

exports[`ApplicationBase should render with minimal props 1`] = `
<ThemeProvider
  className="application-theme-provider fill"
  isGlobalTheme={false}
>
  <Base
    customMessages={Object {}}
    locale="en"
    strictMode={false}
  >
    <InjectIntl(Component)>
      <ActiveBreakpointProvider>
        <withPromptRegistration(NavigationPromptCheckpoint)
          onPromptChange={[Function]}
        >
          <ApplicationLoadingOverlayProvider>
            <ApplicationErrorBoundary>
              <Suspense
                fallback={
                  <ApplicationLoadingOverlay
                    backgroundStyle="clear"
                    isOpen={true}
                  />
                }
              >
                <div>
                  content
                </div>
              </Suspense>
            </ApplicationErrorBoundary>
          </ApplicationLoadingOverlayProvider>
        </withPromptRegistration(NavigationPromptCheckpoint)>
      </ActiveBreakpointProvider>
    </InjectIntl(Component)>
  </Base>
</ThemeProvider>
`;
